--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         This is a button that needs<br />
         functionality
       </button>
+      <img src="images/frankie!!!!!.jpg" alt="My Bulldog Frankie" />
     </div>
   </body>
 </html>
